Fixing bottom gap after results bounce with new layout

--- a/source/stylesheets/modules/_voting-booths.scss
+++ b/source/stylesheets/modules/_voting-booths.scss
@@ -94,7 +94,7 @@
 
 .voting-booth-results-container {
   position: fixed;
-  height: 100%;
+  height: 110%;
   width: 100%;
   top: 0;
   display: table;
@@ -105,9 +105,9 @@
 
 .voting-booth-result {
   background: $gray-darker image-url("background-patterns/science-illustration.png");
-  height: 125%;
+  height: 100%;
   @include animation-fill-mode(forwards);
-  padding-bottom: 2em;
+  padding-bottom: 5em;
   display: none;
 
   &.has-voted {
